spec/e2e/assignment/undefined.lit
unknown = "what"; # error: [line 1] Runtime error: Undefined variable 'unknown'.
